# ptd

./: README.md  pyproject.toml
ptd/: ptd.py
td/: db.py  td.py
todo/: db.py  todo.py
