[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Piero Lescano <71156605+piero-vic@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
todo = "todo.todo:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
